--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "homepage": "https://gitlab.com/shuri-dev/shuri-api#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "pg": "^7.11.0",
+    "sequelize": "^5.9.4",
     "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
