[#167180508]create-admin: :sparkles: adds admin
- Create admin
- Admin sign in

[Starts #167180508]

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,13 @@
     "node": true,
     "es6": true,
     "jest": true
+  },
+  "rules": {
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ]
   }
 }
