--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest ",
-    "dev": "NODE_ENV=development nodemon --exec babel-node src",
+    "test": "NODE_ENV=test npm run db:reset && jest  --collect-coverage",
+    "dev": "NODE_ENV=development nodemon --exec babel-node src/app.js",
     "clean": "rm -rf dist && mkdir dist",
     "build-server": "babel -d ./dist ./src",
-    "build": "npm run clean && npm run build-server"
+    "build": "npm run clean && npm run build-server",
+    "db:migrate": "./node_modules/.bin/sequelize db:migrate --env test",
+    "db:seed": "./node_modules/.bin/sequelize  db:seed:all --env test",
+    "db:migrate:undo:all": "./node_modules/.bin/sequelize db:migrate:undo:all --env test",
+    "db:reset": "npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed",
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -27,11 +32,11 @@
   },
   "homepage": "https://gitlab.com/shuri-dev/shuri-api#readme",
   "dependencies": {
-    "@casl/ability": "^3.1.2",
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
     "passport": "^0.4.0",
@@ -46,14 +51,28 @@
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.2",
+    "babel-jest": "^24.8.0",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
+    "husky": "^3.0.2",
     "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1",
-    "superagent": "^5.1.0",
-    "supertest": "^4.0.2"
+    "supertest": "^3.4.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
