[#167738973] corrected data stracture: revambe db
- Corrected some model instance
- Corrected urls
- School User bulk create

[Finishes #167738973]

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=test npm run db:reset && jest  --collect-coverage",
+    "test": "NODE_ENV=test npm run db:reset && jest  --collect-coverage --detectOpenHandles",
     "dev": "NODE_ENV=development nodemon --exec babel-node src/app.js",
     "clean": "rm -rf dist && mkdir dist",
     "build-server": "babel -d ./dist ./src",
