--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "clean": "rm -rf dist && mkdir dist",
     "build-server": "babel -d ./dist ./src",
     "build": "npm run clean && npm run build-server",
-    "db:migrate": "./node_modules/.bin/sequelize db:migrate",
-    "db:seed": "./node_modules/.bin/sequelize  db:seed:all",
+    "db:migrate": "NODE_ENV=test ./node_modules/.bin/sequelize db:migrate --env test",
+    "db:prod:migrate": "NODE_ENV=production ./node_modules/.bin/sequelize db:migrate",
+    "start": "NODE_ENV=production nodemon --exec babel-node src/app.js",
+    "db:seed": "./node_modules/.bin/sequelize  db:seed:all --env test",
     "db:migrate:undo:all": "./node_modules/.bin/sequelize db:migrate:undo:all --env test",
     "db:reset": "npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed",
     "lint": "eslint . --fix --max-warnings=0"
@@ -34,6 +36,7 @@
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
