--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rm -rf dist && mkdir dist",
     "build-server": "babel -d ./dist ./src",
     "build": "npm run clean && npm run build-server",
-    "db:migrate": "./node_modules/.bin/sequelize db:migrate --env test",
-    "db:seed": "./node_modules/.bin/sequelize  db:seed:all --env test",
+    "db:migrate": "./node_modules/.bin/sequelize db:migrate",
+    "db:seed": "./node_modules/.bin/sequelize  db:seed:all",
     "db:migrate:undo:all": "./node_modules/.bin/sequelize db:migrate:undo:all --env test",
     "db:reset": "npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed",
     "lint": "eslint . --fix --max-warnings=0"
